--- a/Resources/views/formStartLayout.html.twig
+++ b/Resources/views/formStartLayout.html.twig
@@ -1,22 +1,29 @@
 {% block form_start %}
-    {% set attr = id is not same as(form.vars.id) ? {id: id, novalidate: 'novalidate'} : {novalidate: 'novalidate'} %}
-
     {%- do form.setMethodRendered() -%}
     {% set method = method|upper %}
 
-    {%- if method in ["GET", "POST"] -%}
+    {%- if method in ['GET', 'POST'] -%}
         {% set form_method = method %}
     {%- else -%}
-        {% set form_method = "POST" %}
+        {% set form_method = 'POST' %}
     {%- endif -%}
 
-    <form name="{{ name }}" method="{{ form_method|lower }}"{% if action != '' %} action="{{ action }}"{% endif %}{% for attrname, attrvalue in attr %} {{ attrname }}="{{ attrvalue }}"{% endfor %}{% if multipart %} enctype="multipart/form-data"{% endif %}>
+    {% set attr = {
+        id: id is same as(form.vars.id) ? false : id,
+        name: name,
+        method: form_method|lower,
+        action: action == '' ? false : action,
+        multipart: multipart ? 'multipart/form-data' : false,
+        novalidate: true,
+    } -%}
+
+    <form {{ attributes(attr) }}>
 
     {%- if form_method != method -%}
         <input type="hidden" name="_method" value="{{ method }}"/>
     {%- endif -%}
 
-    {%- if preserveQuery is defined -%}
+    {% if preserveQuery is defined -%}
         {% include '@VanioWeb/preserveQueryFormFields.html.twig' %}
     {%- endif -%}
 {% endblock %}
