* Pass required variable inside ccalar object form label layout * Removal of whitespace in menu.label Twig macro

--- a/Resources/views/formLayout.html.twig
+++ b/Resources/views/formLayout.html.twig
@@ -1,5 +1,6 @@
 {% block scalar_object_label -%}
     {% set label_attr = label_attr + {for: form.value.vars.id} -%}
+    {% set required = form.value.vars.required %}
     {{ block('form_label') -}}
 {% endblock %}
 
