--- a/Resources/views/menu.html.twig
+++ b/Resources/views/menu.html.twig
@@ -27,13 +27,13 @@
     </a>
 {% endmacro %}
 
-{% macro label(page = null, context = null, translationDomain = 'pages') %}
-    {% if page is null %}
-        {% set page = app.request.attributes.get('_route') %}
-        {% set context = context ?? app.request.attributes.get('_route_params') %}
-    {% endif %}
+{% macro label(page = null, context = null, translationDomain = 'pages') -%}
+    {% if page is null -%}
+        {% set page = app.request.attributes.get('_route') -%}
+        {% set context = context ?? app.request.attributes.get('_route_params') -%}
+    {% endif -%}
 
-    {{- is_translated(page, translationDomain) ? page|trans({}, translationDomain)|evaluate(context ?? {}) : page -}}
+    {{ is_translated(page, translationDomain) ? page|trans({}, translationDomain)|evaluate(context ?? {}) : page -}}
 {% endmacro %}
 
 {% macro item(route = null, parameters = null, itemAttributes = {}, linkAttributes = {}) %}
