* Added all icons to collectionWidgetLayout * Modified Toggle to support selection options * Renamed DependentSelect to DependentChoice and added support for expanded choice

--- a/Resources/views/collectionWidgetLayout.html.twig
+++ b/Resources/views/collectionWidgetLayout.html.twig
@@ -54,6 +54,10 @@
             {{ form_row(form) }}
         {% endif %}
 
-        <div class="collection-actions"><a href="#" class="collection-move"></a></div>
+        <div class="collection-actions">
+            <a href="#" class="collection-remove"></a>
+            <a href="#" class="collection-move"></a>
+            <a href="#" class="collection-add"></a>
+        </div>
     </div>
 {% endmacro %}
