--- a/Resources/views/collectionWidgetLayout.html.twig
+++ b/Resources/views/collectionWidgetLayout.html.twig
@@ -14,7 +14,7 @@
                         {% set type = child.vars.block_prefixes[child.vars.block_prefixes|length - 2] %}
 
                         {% if type != 'hidden' and (type != 'scalar_object' or child.value.vars.block_prefixes[child.value.vars.block_prefixes|length - 2] != 'hidden') %}
-                            {% set label = form_label(child) %}
+                            {% set label = form_label(child, null, {widget: ''}) %}
 
                             {% if label matches '~\\sclass\\s*=\\s*["\'](?:[^"\']*\\s+)?form-group(?:\\s+[^"\']*)?["\']~' %}
                                 {{ label|raw }}
