--- a/Resources/views/formLayout.html.twig
+++ b/Resources/views/formLayout.html.twig
@@ -128,8 +128,13 @@
 
         {{ form_widget(form[toggleName], {prepend: true, attr: {class: "#{class_name(form[toggleName].vars.attr.class ?? '')} form-toggle__toggle"}}) }}
         {{ form_errors(form[toggleName]) }}
-        {{ form_widget(form[formName], {attr: {class: "#{class_name(form[formName].vars.attr.class ?? '')} form-toggle__form"}}) }}
-        {{ form_errors(form[formName]) }}
+
+        <div class="form-group form-toggle__form">
+            {{ form_label(form[formName]) }}
+            {{ form_widget(form[formName]) }}
+            {{ form_errors(form[formName]) }}
+        </div>
+
         {{ form_rest(form) }}
     </div>
 {% endblock %}
