Tweaked autocomple style

--- a/Resources/assets/styles/auto_complete.less
+++ b/Resources/assets/styles/auto_complete.less
@@ -15,7 +15,7 @@
     overflow: auto;
 }
 
-.autocomplete-no-suggestion, .autocomplete-loading, .autocomplete-remaining-count {
+.autocomplete-group, .autocomplete-no-suggestion, .autocomplete-loading, .autocomplete-remaining-count {
     cursor: default;
     padding: 10px;
 }
