Better autocomplete suggestion format

--- a/Resources/assets/styles/auto_complete.less
+++ b/Resources/assets/styles/auto_complete.less
@@ -27,6 +27,11 @@
     .autocomplete-group ~ & {
         padding-left: 20px;
     }
+
+    strong {
+        font-weight: normal;
+        text-decoration: underline;
+    }
 }
 
 .autocomplete-selected {
