--- a/Resources/views/paginator.html.twig
+++ b/Resources/views/paginator.html.twig
@@ -7,7 +7,7 @@
 {% if page is defined %}
     <div class="paginator">
         <p class="paginator-info">
-            {{ 'paginator.info'|trans({'%firstRecord%': page.firstRecord + 1, '%lastRecord%': min(page.lastRecord + 1, records|length), '%recordTotalCount%': records|length}, 'paginator')|raw }}
+            {{ 'paginator.info'|trans({'%firstRecord%': page.firstRecord + 1, '%lastRecord%': min(page.lastRecord, records|length), '%recordTotalCount%': records|length}, 'paginator')|raw }}
         </p>
 
         {% if records|length > page.recordsOnFirstPage %}
