--- a/Resources/views/formStartLayout.html.twig
+++ b/Resources/views/formStartLayout.html.twig
@@ -15,7 +15,7 @@
         action: action == '' ? false : action,
         multipart: multipart ? 'multipart/form-data' : false,
         novalidate: null,
-    } -%}
+    } + attr -%}
 
     <form {{ attributes(attr) }}>
 
