--- a/Resources/views/recursiveFormLabelLayout.html.twig
+++ b/Resources/views/recursiveFormLabelLayout.html.twig
@@ -10,7 +10,7 @@
             {% set label_attr = {class: {(label_attr.class): true}} + label_attr %}
         {% endif %}
 
-        <label {{ attributes({class: label_attr.class ?? {} + {required: required and (nonCompoundWrapper ?? false or not compound), 'control-label': true}} + label_attr) }}>
+        <label {{ attributes({class: label_attr.class ?? {} + {required: required and (nonCompoundWrapper ?? false or not compound) and ((placeholder ?? null) is not null or 'choice' not in block_prefixes), 'control-label': true}} + label_attr) }}>
             {{- translate_form_label(form, label, translation_domain) -}}
         </label>
     {%- endif %}
