--- a/Resources/views/formTranslator.html.twig
+++ b/Resources/views/formTranslator.html.twig
@@ -1,6 +1,7 @@
 {% macro translate_form_label(form, label, translationDomain = null) -%}
     {% import _self as self -%}
 
+
     {% if label is not empty or form.vars.label_format is not empty -%}
         {% set label = form.vars.label_format|replace({'%name%': form.vars.name, '%id%': form.vars.id})|default(label) -%}
 
@@ -14,33 +15,41 @@
     {% endif -%}
 {% endmacro %}
 
-{% macro translate_recursive(id, translationDomain = null, currentPath = null, preferFallback = false) -%}
+{% macro translate_recursive(id, translationDomain = null, path = null, preferFallback = false) -%}
     {% import _self as self -%}
 
-    {% set currentId = currentPath is same as(null) ? id : currentPath|join('.') -%}
-    {% set currentPath = currentPath ?? id|split('.') -%}
+    {% set path = path ?? id|split('.') -%}
+    {% set shouldStop = false %}
 
-    {% if is_translated(currentId, translationDomain, null, preferFallback) -%}
-        {{ currentId|trans({}, translationDomain) -}}
-    {% elseif currentPath|length > 1 -%}
-        {{ self.translate_recursive(id, translationDomain, currentPath|slice(1), preferFallback) -}}
-    {% elseif not preferFallback -%}
-        {{ self.translate_recursive(id, translationDomain, null, true) -}}
-    {% else -%}
-        {{ currentId -}}
-    {% endif -%}
+    {% for pathLength in 0..(path|length) if not shouldStop %}
+        {% set currentPath = path|slice(pathLength) -%}
+        {% set currentId = currentPath|join('.') -%}
+
+        {% if is_translated(currentId, translationDomain, null, preferFallback) -%}
+            {{ currentId|trans({}, translationDomain) -}}
+            {% set shouldStop = true %}
+        {% elseif pathLength + 1 == path|length %}
+            {% if preferFallback %}
+                {{ currentId -}}
+            {% else %}
+                {{ self.translate_recursive(id, translationDomain, null, true) -}}
+            {% endif %}
+        {% endif %}
+    {% endfor %}
 {% endmacro %}
 
 {% macro form_path(form, currentPath = null) -%}
     {% import _self as self -%}
 
-    {% if 'collection' not in form.parent.vars.block_prefixes ?? [] and 'a2lix_translations' not in form.parent.vars.block_prefixes ?? [] and 'a2lix_translationsForms' not in form.parent.vars.block_prefixes ?? [] -%}
-        {% set currentPath = currentPath is same as(null) ? form.vars.name : "#{form.vars.name}.#{currentPath}" -%}
-    {% endif -%}
+    {% for i in range(1,50) %}
+        {% if 'collection' not in form.parent.vars.block_prefixes ?? [] and 'a2lix_translations' not in form.parent.vars.block_prefixes ?? [] and 'a2lix_translationsForms' not in form.parent.vars.block_prefixes ?? [] -%}
+            {% set currentPath = currentPath is same as(null) ? form.vars.name : "#{form.vars.name}.#{currentPath}" -%}
+        {% endif -%}
 
-    {% if form.parent -%}
-        {{ self.form_path(form.parent, currentPath) -}}
-    {% else -%}
-        {{ currentPath -}}
-    {% endif -%}
+        {% if form.parent -%}
+            {% set form = form.parent %}
+        {% else -%}
+            {{ currentPath -}}
+        {% endif -%}
+    {% endfor %}
 {% endmacro %}
