--- a/Resources/views/formTranslator.html.twig
+++ b/Resources/views/formTranslator.html.twig
@@ -37,10 +37,10 @@
     {% endfor %}
 {% endmacro %}
 
-{% macro form_path(form, currentPath = null) -%}
+{% macro form_path(form, currentPath = null, maxPathLength = 50) -%}
     {% import _self as self -%}
 
-    {% for i in range(1,50) if form is not same as(null) -%}
+    {% for i in range(1, maxPathLength) if form is not same as(null) -%}
         {% if 'collection' not in form.parent.vars.block_prefixes ?? [] and 'a2lix_translations' not in form.parent.vars.block_prefixes ?? [] and 'a2lix_translationsForms' not in form.parent.vars.block_prefixes ?? [] -%}
             {% set currentPath = currentPath is same as(null) ? form.vars.name : "#{form.vars.name}.#{currentPath}" -%}
         {% endif -%}
