--- a/Resources/views/formChoiceWidgetLayout.html.twig
+++ b/Resources/views/formChoiceWidgetLayout.html.twig
@@ -1,7 +1,7 @@
 {% block form_choice_widget %}
     {% set attr = {
-        class: attr.class ?? '' ~ ' form-choice',
-        'data-component-form-choice': '{}',
+    class: attr.class ?? '' ~ ' form-choice',
+    'data-component-form-choice': '{}',
     } + attr %}
 
     <div {{ block('widget_container_attributes') }}>
@@ -28,6 +28,14 @@
 {% endblock %}
 
 {% block choice_widget_options %}
+    {% set option_label_block = null %}
+
+    {% for block_prefix in block_prefixes|reverse %}
+        {% if option_label_block is null and block("#{block_prefix}_option_label") is defined %}
+            {% set option_label_block = "#{block_prefix}_option_label" %}
+        {% endif %}
+    {% endfor %}
+
     {% for groupLabel, choice in options %}
         {% if choice is iterable %}
             <optgroup label="{{ choice_translation_domain is same as(false) ? groupLabel : groupLabel|trans({}, choice_translation_domain) }}">
@@ -48,7 +56,11 @@
                     data-form="{{ form_row(forms[choice.value])|escape('html_attr') }}"
                 {% endif %}
             >
-                {{ choice_translation_domain is same as(false) ? choice.label : choice.label|trans({}, choice_translation_domain) }}
+                {% if option_label_block is not null %}
+                    {{ block(option_label_block) }}
+                {% else %}
+                    {{ choice_translation_domain is same as(false) ? choice.label : choice.label|trans({}, choice_translation_domain) }}
+                {% endif %}
             </option>
         {% endif %}
     {% endfor %}
